ports/renesas-ra/VK_RA6M5_build_202505220054.log
Use make V=1 or set BUILD_VERBOSE in your environment to increase build verbosity.
patch LVGL...
git -C ../../lib/lv_bindings apply --directory lvgl ../../lib/lv_bindings/patch/fix_GC.patch || true
fatal: not a git repository: /home/teodor/vkth_micropython/lib/lv_bindings/../../.git/modules/lib/lv_bindings
makeversionhdr.py: Warning: No git repo or tag info available, falling back to mpconfig.h version info.
GEN build-VK_RA6M5/genhdr/qstr.i.last
GEN build-VK_RA6M5/genhdr/qstr.split
GEN build-VK_RA6M5/genhdr/moduledefs.split
GEN build-VK_RA6M5/genhdr/root_pointers.split
GEN build-VK_RA6M5/genhdr/compressed.split
GEN build-VK_RA6M5/genhdr/qstrdefs.collected.h
GEN build-VK_RA6M5/genhdr/moduledefs.collected
GEN build-VK_RA6M5/genhdr/root_pointers.collected
GEN build-VK_RA6M5/genhdr/compressed.collected
Module registrations not updated
QSTR not updated
Root pointer registrations not updated
Compressed data not updated
CC extint.c
extint.c: In function 'extint_register_pin':
extint.c:220:51: error: unknown type name 'pin_obj_t'
  220 |         bool keep_pull = mp_hal_pin_config((const pin_obj_t *)pin) & MP_HAL_PIN_PULL_UP;
      |                                                   ^~~~~~~~~
extint.c:220:26: error: too few arguments to function 'mp_hal_pin_config'
  220 |         bool keep_pull = mp_hal_pin_config((const pin_obj_t *)pin) & MP_HAL_PIN_PULL_UP;
      |                          ^~~~~~~~~~~~~~~~~
In file included from ../../py/mphal.h:35,
                 from extint.c:34:
./mphalport.h:114:6: note: declared here
  114 | void mp_hal_pin_config(mp_hal_pin_obj_t pin, uint32_t mode, uint32_t pull, uint32_t drive, uint32_t alt);
      |      ^~~~~~~~~~~~~~~~~
See [1;31mhttps://github.com/micropython/micropython/wiki/Build-Troubleshooting[0m
make: *** [../../py/mkrules.mk:90: build-VK_RA6M5/extint.o] Error 1
